# multi-facet-conversation-evaluation

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-hf.txt  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
data/index/: facets_meta.json
data/processed/: facets_cleaned.csv  facets_enriched.csv  facets_enriched.jsonl
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md
examples/: README.md  REPORT.md  conversation_bank.py  conversations_table.csv  conversations_table.md  generate_conversations.py  manifest.csv  summary.json
scripts/: build_conversations_table.py  build_report.py  run_calibration_appendix.py  smoke_test.py  smoke_test_alt_model.py  zip_examples.py
src/: __init__.py
src/api/: server.py
src/data_pipeline/: category_taxonomy.py  clean.py  enrich.py  index.py  rubric_templates.py
src/models/: llm_client.py
src/scoring/: pipeline.py  retriever.py  scorer.py
src/ui/: app.py
src/utils/: config.py  embeddings.py  logging.py  text.py  types.py
tests/: test_api.py  test_data_pipeline.py  test_scoring.py  test_text_normalization.py
