[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocean-across-eval"
version = "0.1.0"
description = "Production-ready multi-facet conversation evaluation benchmark (≤16B open-weights, scales to 5000+ facets)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Eros" }]
keywords = ["llm-eval", "benchmark", "conversation", "ordinal-scoring", "rubric"]

dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "pandas>=2.1",
    "numpy>=1.26",
    "tqdm>=4.66",
    "rich>=13.7",
    "typer>=0.12",
    "sentence-transformers>=2.7",
    "faiss-cpu>=1.8",
    "httpx>=0.27",
    "tenacity>=8.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.33",
    "altair>=5.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
hf = ["transformers>=4.40", "torch>=2.2", "accelerate>=0.30"]
dev = ["pytest>=8.1", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10", "ipykernel"]

[project.scripts]
oae = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]
